etl-api/tests/integration/snapshots/r#mod__integration__pipelines_test__all_pipelines_can_be_read-2.snap
---
source: etl-api/tests/integration/pipelines_test.rs
expression: pipeline.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_size: 2000,
            max_fill_ms: 10,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    max_table_sync_workers: Some(
        4,
    ),
}
