etl-api/tests/integration/snapshots/r#mod__integration__pipelines_test__pipeline_config_can_be_updated.snap
---
source: etl-api/tests/integration/pipelines_test.rs
expression: response.config
---
FullApiPipelineConfig {
    publication_name: "publication",
    batch: Some(
        BatchConfig {
            max_size: 10000,
            max_fill_ms: 100,
        },
    ),
    table_error_retry_delay_ms: Some(
        10000,
    ),
    max_table_sync_workers: Some(
        2,
    ),
}
